# cuda_apriltag_ros

./: .gitignore  CMakeLists.txt  README.md  package.xml
apriltag_ros/: CMakeLists.txt
apriltag_ros/include/apriltag_ros/: common_functions.h
apriltag_ros/src/: common_functions.cpp
config/: calibration.yaml  camera.yaml  settings.yaml
cuda_apriltag_ros/: CMakeLists.txt  nodelet_plugins.xml  package.xml
cuda_apriltag_ros/include/apriltag_ros/: common_functions.h  single_image_detector.h
cuda_apriltag_ros/include/cuda_apriltag_ros/: common_functions.h  continuous_detector.h  single_image_detector.h
cuda_apriltag_ros/src/: apriltag_ros_continuous_node.cpp  apriltag_ros_single_image_client_node.cpp  common_functions.cpp  continuous_detector.cpp  cuda_apriltag_ros_single_image_client_node.cpp  cuda_apriltag_ros_single_image_server_node.cpp  single_image_detector.cpp
launch/: calibrate.launch  cuda_continuous_detection.launch  usb_camera.launch
scripts/: compute_calibration.py  record_calibration.py
src/: cuda_continuous_detector.cpp
