<?xml version="1.0"?>
<package>
  <name>cuda_apriltag_ros</name>
  <version>3.2.1</version>
  <description>
    A ROS wrapper of the CUDA-based AprilTag 3 visual fiducial detection
    algorithm. Provides full access to the core AprilTag 3 algorithm's
    customizations and makes the tag detection image and detected tags' poses
    available over ROS topics (including tf). The core AprilTag 3 algorithm is
    extended to allow the detection of tag bundles and a bundle calibration
    script is provided (bundle detection is more accurate than single tag
    detection). Continuous (camera image stream) and single image detector nodes
    are available.
  </description>

  <license>BSD</license>

  <maintainer email="woz4tetra@todo.todo">woz4tetra</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>apriltag</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>apriltag_ros</build_depend>
  
  <run_depend>tf</run_depend>
  <run_depend>apriltag</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>apriltag_ros</run_depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
